[project]
name = "ted-super"
version = "0.4.0"
description = "A Discord bot focused on minigames and interactions between server members."
authors = [
    { name = "Alex The JPEG", email = "alexthejpeg@proton.me" }
]
dependencies = [
    "py-cord-dev==2.5.0rc5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.269", "black~=23.3.0"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = ["E", "F", "W", "I", "N", "ANN", "B", "Q", "PTH", "SIM"]
ignore = ["ANN101", "ANN002", "ANN003"]
line-length = 120

[tool.black]
line-length = 120
