[tool.poetry]
name = "ted-super"
version = "0.5.0"
description = "A Discord bot focused on minigames and interactions between server members."
authors = ["Alex The JPEG <alexthejpeg@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord-dev = "^2.5.0rc5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "I", "N", "ANN", "B", "Q", "PTH", "SIM"]
ignore = ["ANN101", "ANN002", "ANN003"]
line-length = 128

[tool.black]
line-length = 128
